--- a/abajo.htm
+++ b/abajo.htm
@@ -4,7 +4,7 @@
 	<title>ABAJO</title>
 	<center><h1><font face="comic sans ms">ESTA ES LA PARTE DE ABAJO DE MI PAGINA CARLOS MARQUEZ</font></h1></center>
 </head>
-<body background="ondo.JPG">
+<body background="ondo.JPEG">
 
 </body>
 </html>
