--- a/arriba.htm
+++ b/arriba.htm
@@ -4,7 +4,7 @@
 	<title>ARRIBA</title>
 	<center><h1><font face="comic sans ms" color="white">NANOTECNOLOGIA</font></h1></center>
 </head>
-<body background="ondo.JPG">
+<body background="ondo.JPEG">
 
 </body>
 </html>
