--- a/izq.htm
+++ b/izq.htm
@@ -4,7 +4,7 @@
 	<title>NANOTECNOLOGIA</title>
 	<center><h3><font face="comic sans ms" color="white">ESTA ES LA PARTE DE IZQUIERDA DE MI PAGINA CARLOS MARQUEZ</font></h3></center>
 </head>
-<body background="ondo.JPG">
+<body background="ondo.JPEG">
 	<ol type="1">
 		<li><a href="verde.htm" target="noimporta">¿Que es?</a></li>
 		<li><a href="azul.htm" target="noimporta">¿Sobre que trata?</a></li>
