--- a/central.htm
+++ b/central.htm
@@ -4,7 +4,7 @@
 	<title>CENTRAL</title>
 	<center><h1><font face="comic sans ms" color="white">ESTA ES LA PARTE DE CENTRAL DE MI PAGINA realizado por CARLOS MARQUEZ</font></h1></center>
 </head>
-<body background="ondo.JPEG">
+<body background="ondo.JPG">
 	<div class="fondo">
 		
 	</div>
